--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -12,6 +12,7 @@
             <groupId>com.example</groupId>
             <artifactId>OrderService</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <type>war</type>
         </dependency>
     </dependencies>
 </project>
