--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -10,9 +10,8 @@
     <dependencies>
         <dependency>
             <groupId>com.example</groupId>
-            <artifactId>OrderService</artifactId>
+            <artifactId>PaymentService</artifactId>
             <version>1.0-SNAPSHOT</version>
-            <type>war</type>
         </dependency>
     </dependencies>
 </project>
