--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8085
 spring.mvc.view.prefix=/static/
 spring.mvc.view.suffix=.html
+# Optional - only if you want to customize context path
+server.servlet.context-path=/OrderService
