--- a/OrderService/src/main/resources/application.properties
+++ b/OrderService/src/main/resources/application.properties
@@ -1,5 +1,8 @@
-server.port=8085
+server.port=8081
 spring.mvc.view.prefix=/static/
 spring.mvc.view.suffix=.html
 # Optional - only if you want to customize context path
 server.servlet.context-path=/OrderService
+# Ensure static resources are properly mapped
+spring.mvc.static-path-pattern=/**
+spring.web.resources.static-locations=classpath:/static/
